Stop the project-title from wrapping
Because it looks better when it's not wrapped.

--- a/css/style.css
+++ b/css/style.css
@@ -253,7 +253,7 @@ header {
     flex-flow: row wrap;
     justify-content: center;
     gap: 4rem 4rem;
-    padding: 6rem 0.5rem;
+    padding: 6rem 0rem;
 }
 
 .project {
@@ -263,7 +263,7 @@ header {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
-    max-width: 330px;
+    max-width: 320px;
     padding: 2rem;
 }
 
@@ -419,7 +419,7 @@ footer > h4 > .icon-heart {
     }
 
     .projects {
-        max-width: calc(340*2px + 6rem);
+        max-width: calc(320*2px + 6rem);
     }
 }
 
@@ -428,18 +428,15 @@ footer > h4 > .icon-heart {
         padding-left: 18vw;
         padding-right: 18vw;
     }
-    #services-section, #projects-section {
+    #services-section {
         padding-left: 8vw;
         padding-right: 8vw;
     } 
     .info {
+        font-size: 1.2rem;
         max-width: 30vmax;
     }
     .welcome {
         max-width: 20vmax;
-    }
-
-    html {
-        font-size: 1.1rem;
     }
 }
